6. Digital Forensics/deployments/webservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-webservice-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: flask-webservice
  template:
    metadata:
      labels:
        app: flask-webservice
    spec:
      containers:
      - name: flask-webservice
        image: suturri/flask-webservice:latest
        resources:
          limits:
            memory: "50Mi"
            cpu: "50m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-webservice-service
spec:
  selector:
    app: flask-webservice
  ports:
    - name: http
      port: 3000
      targetPort: 3000
